--- a/package.json
+++ b/package.json
@@ -6,9 +6,20 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^4.5.3",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-bootstrap-date-picker": "^5.1.0",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.11.5",
+    "react-redux": "^7.2.2",
+    "react-route": "^1.0.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-swipe-views": "0.0.12",
+    "react-swipeable-views": "^0.13.9",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
